--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#010111"
     tools:context=".Activities.MainActivity">
 
@@ -11,8 +11,8 @@
         android:id="@+id/slider"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:alpha="0.1" />
+        android:alpha="0.1"
+        android:gravity="center" />
 
     <com.daimajia.slider.library.Indicators.PagerIndicator
         android:id="@+id/custom_indicator"
@@ -27,8 +27,8 @@
         android:orientation="vertical">
 
         <include
-            layout="@layout/tool_bar"
-            android:id="@+id/tool_bar" />
+            android:id="@+id/tool_bar"
+            layout="@layout/tool_bar" />
 
         <Space
             android:layout_width="fill_parent"
@@ -36,21 +36,19 @@
             android:layout_weight="0.5" />
 
         <TextView
+            android:id="@+id/chamada"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/chamada"
-            android:id="@+id/chamada"
-            android:textColor="@color/laranja"
-            android:textStyle="bold"
-            android:textAlignment="center"
             android:layout_gravity="center"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:gravity="center"
+            android:text="@string/chamada"
+            android:textAlignment="center"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/laranja"
             android:textSize="32sp"
-            android:layout_below="@id/tool_bar"
-            android:layout_centerHorizontal="true" />
+            android:textStyle="bold" />
 
         <Space
             android:layout_width="fill_parent"
@@ -58,25 +56,22 @@
             android:layout_weight="0.2" />
 
         <EditText
+            android:id="@+id/edtSearchAMovie"
             android:layout_width="match_parent"
             android:layout_height="42dp"
-            android:id="@+id/edtSearchAMovie"
             android:layout_gravity="center_horizontal"
-            android:layout_marginRight="44dp"
             android:layout_marginLeft="44dp"
+            android:layout_marginRight="44dp"
             android:background="#CCCCCC"
-            android:singleLine="true"
-            android:textAlignment="center"
-            android:textStyle="normal"
-            android:scrollIndicators="none"
-            android:lines="1"
-            android:inputType="text"
-            android:gravity="center_vertical|center_horizontal"
             android:enabled="true"
-            android:allowUndo="true"
+            android:gravity="center_vertical|center_horizontal"
             android:hint="@string/exemplo_filme"
+            android:inputType="text"
+            android:lines="1"
+            android:maxLines="1"
+            android:textAlignment="center"
             android:textSize="18sp"
-            android:layout_below="@id/chamada"/>
+            android:textStyle="normal" />
 
         <Space
             android:layout_width="fill_parent"
@@ -84,19 +79,18 @@
             android:layout_weight="0.05" />
 
         <Button
+            android:id="@+id/btnSearchAMovie"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:text="@string/search_a_movie"
-            android:layout_marginRight="70dp"
-            android:layout_marginLeft="70dp"
-            android:id="@+id/btnSearchAMovie"
             android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="70dp"
+            android:layout_marginRight="70dp"
+            android:background="#f35100"
             android:onClick="busca"
             android:padding="4dp"
-            android:background="#f35100"
+            android:text="@string/search_a_movie"
             android:textColor="#000000"
-            android:textSize="18sp"
-            android:layout_below="@id/edtSearchAMovie"/>
+            android:textSize="18sp" />
 
         <Space
             android:layout_width="fill_parent"
