--- a/app/src/main/res/layout/simple_row.xml
+++ b/app/src/main/res/layout/simple_row.xml
@@ -1,37 +1,32 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="112dp"
+    android:orientation="horizontal"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="80dp">
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:ignore="UseCompoundDrawables">
 
         <ImageView
+            android:id="@+id/imgFilmePoster"
             android:layout_width="53dp"
             android:layout_height="80dp"
-            android:id="@+id/imgFilmePoster"
+            android:contentDescription="@string/poster"
             android:src="@drawable/img" />
 
         <TextView
             android:id="@+id/rowTextView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:text=""
-            android:textStyle="normal"
-            android:paddingLeft="10dp"
-            android:paddingTop="10dp"
+            android:layout_gravity="center_vertical"
             android:paddingBottom="10dp"
-            android:paddingRight="0dp"
-            android:layout_gravity="center_vertical">
-        </TextView>
-
-    </LinearLayout>
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="10dp"
+            android:textSize="14sp"
+            android:textStyle="normal" />
 
 </LinearLayout>
